--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release Obsidian Plugin
 on:
   push:
     tags:
-      - '*'
+      - "*"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,17 +13,11 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '18.x'
+          node-version: "18.x"
       - name: Get Version
         id: version
         run: |
           echo "::set-output name=tag::$(git describe --abbrev=0)"
-      # Build the plugin
-      - name: Build
-        id: build
-        run: |
-          npm install
-          npm run build --if-present
       # Package the required files into a zip
       - name: Package
         run: |
