--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "id": "iframe-freeform",
+  "id": "freeform",
   "name": "Freeform",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "minAppVersion": "0.0.0",
   "description": "Make visualizations and run arbitrary code with JavaScript + iframe blocks.",
   "author": "tmcw",
